--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backend_bot",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
@@ -16,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.15.1"
   }
 }
