--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@google-cloud/storage": "^7.14.0",
+    "@google-cloud/text-to-speech": "^5.6.0",
     "@google-cloud/vertexai": "^1.9.0",
     "@google/generative-ai": "^0.21.0",
     "cors": "^2.8.5",
