helper function for PDF styling

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fontkit": "^2.0.4",
     "form-data": "^4.0.1",
     "nodemon": "^3.1.7",
     "pdf-lib": "^1.17.1",
